fix main section title font size on mobile phone

--- a/src/style/imports/sections/main.less
+++ b/src/style/imports/sections/main.less
@@ -9,7 +9,7 @@
     text-align: center;
     margin-bottom: 0;
     @media @tablet { font-size: 56px }
-    @media @phone { font-size: 36px }
+    @media @phone { font-size: 28px }
   }
   h2 {
     font-size: 56px;
